--- a/css/calculator.css
+++ b/css/calculator.css
@@ -50,6 +50,7 @@ button {
 .calculator {
     display: grid;
     width: 100%;
+    height: 500px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     grid-template-areas:
     "output output"
@@ -57,5 +58,5 @@ button {
     "numbers operands";
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr 4fr;
-    background-color: orange;
+    margin: 0%;
 }
