operand tag to change button color to orange

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -32,7 +32,10 @@ button {
     display: grid;
     width: 100%;
     grid-area: operands;
-    background-color: aqua;
+}
+
+.operand {
+    background-color: orange;
 }
 
 .numbers {
