--- a/css/calculator.css
+++ b/css/calculator.css
@@ -55,7 +55,7 @@ button {
     display: grid;
     width: 100%;
     height: 500px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     grid-template-areas:
     "output output"
     "actions operands"
