flex output to set text on center right

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -9,6 +9,9 @@ button {
 
 .output {
     grid-area: output;
+    display: flex;
+    align-items: center;
+    justify-content: right;
     font-family:monospace;
     background-color: black;
     color: white;
