--- a/css/calculator.css
+++ b/css/calculator.css
@@ -5,6 +5,7 @@
 button {
     background-color: rgb(219, 215, 215);
     border-color: rgb(219, 215, 215);
+    font-size:x-large;
 }
 
 .output {
@@ -60,6 +61,7 @@ button {
     width: 100%;
     height: 500px;
     font-family:Arial, Helvetica, sans-serif;
+    font-size:x-large;
     grid-template-areas:
     "output output"
     "actions operands"
