--- a/css/calculator.css
+++ b/css/calculator.css
@@ -73,8 +73,8 @@ button:active{
 
 .calculator {
     display: grid;
-    width: 100%;
-    height: 500px;
+    width: 400px;
+    height: 600px;
     font-family:Arial, Helvetica, sans-serif;
     font-size:x-large;
     grid-template-areas:
