remove left border from every 3rd number after first

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -67,11 +67,14 @@ button:active{
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
+.numbers button:nth-child(3n+1) {
+    border-left: 0;
+}
+
 .zero {
     grid-column-start: 1;
     grid-column-end: 4;
     border-bottom: 0;
-    border-left: 0;
 }
 
 .calculator {
