button height to be fixed at 100px

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -3,6 +3,7 @@
 }
 
 button {
+    height: 100px;
     background-color: rgb(219, 215, 215);
     border-color: rgb(219, 215, 215);
     font-size:x-large;
